--- a/jitpack.yml
+++ b/jitpack.yml
@@ -5,6 +5,6 @@ before_install:
 jdk:
   - openjdk11
 
-version: 0.0.1-alpha
-group: com.yuu.android.component
-artifact: logbook
+#version: 0.0.1-alpha
+#group: com.yuu.android.component
+#artifact: logbook
